fix: increased grid spacing

--- a/src/components/awards/style.scss
+++ b/src/components/awards/style.scss
@@ -4,7 +4,7 @@
   display: grid;
   grid-template-columns: 300px 300px 300px;
   justify-content: center;
-  gap: 10px;
+  gap: 20px;
   padding-top: 40px;
 
   .cell {
